--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
 		<title>Memhams</title>
+		<script defer src="build/bundle.js"></script>
 	</head>
 	<body>
-		<h1>Hello There</h1>
+		<div id="app"></div>
 	</body>
 </html>
