changed directory of webpack build

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Memhams</title>
-		<script defer src="build/bundle.js"></script>
+		<script defer src="bundle.js"></script>
 	</head>
 	<body>
 		<div id="app"></div>
