added navbar component

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,6 +2,9 @@
 	<head>
 		<title>Memhams</title>
 		<script defer src="bundle.js"></script>
+		<link rel="stylesheet" type="text/css" href="index.css" />
+		<link href="https://fonts.googleapis.com/css?family=Marcellus&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="app"></div>
