--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css" />
 		<link href="https://fonts.googleapis.com/css?family=Marcellus&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Mukta&display=swap" rel="stylesheet">
 		<link rel="icon" href="logo.ico" type="image/x-icon"/>
 	<link rel="shortcut icon" href="logo.ico" type="image/x-icon"/>
 	</head>
